Second level navigation now reachable again - z-index bug fixed.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.4 $
+ * @version     $Revision: 1.5 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -19,7 +19,7 @@
     position: absolute;
     width: 100%;
     background-color: #FFF;
-    z-index: 100;
+    z-index: 5;
 }
 
  /**
